--- a/style.css
+++ b/style.css
@@ -1947,15 +1947,35 @@ body {
 .vidjet-product-item a {
   text-decoration: none
 }
+.vidjet-product-item-name {
+  color: #303030;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block
+}
 .vidjet-product-item-price {
   color: #793b88;
   font-size: 24px;
-  font-weight: 600
+  font-weight: 600;
+  display: inline-block
 }
 .vidjet-product-item-price:after {
   content: '\20BD';
   font-size: 18px;
   margin-left: 5px
+}
+.vidjet-product-item-price-new {
+  color: red
+}
+.vidjet-product-item-price-old {
+  color: #909090;
+  font-size: 14px;
+  text-decoration: line-through;
+  margin: 5px 0 3px
+}
+.vidjet-product-item-price-old:after {
+  font-size: 12px
 }
 .reviews-block {
   padding: 40px 0
@@ -3000,6 +3020,77 @@ button.mfp-close {
 .addbasket-popup-cards .product-card .h3 {
   font-size: 12px
 }
+.product-page-img.visible-mobile {
+  margin-left: 10px;
+  margin-right: 10px
+}
+.basket-payment-tabs {
+  display: -webkit-box;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: 20px
+}
+.basket-payment-tab {
+  box-sizing: border-box;
+  word-wrap: break-word;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: calc(50% - 30px);
+  height: 48px;
+  border: 1px solid #793b88;
+  color: #793b88;
+  font-weight: 600;
+  text-align: center;
+  line-height: 48px;
+  cursor: pointer;
+  background: #fff;
+  -webkit-transition: .3s;
+  transition: .3s;
+  margin-bottom: 20px
+}
+.basket-payment-tab.active,
+.basket-payment-tab:hover {
+  background: #793b88;
+  color: #fff
+}
+.basket-payment-item {
+  display: none
+}
+.basket-payment-item:nth-child(2) {
+  display: block
+}
+.free-delivery {
+  line-height: 1.5;
+  font-size: 16px;
+  font-weight: 600;
+  border: 1px solid #ff2828;
+  text-align: left;
+  padding: 5px 8px;
+  margin-top: 10px
+}
+.quick-buy-input {
+  margin-bottom: 10px
+}
+.quick-buy-input input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #d3d3d3;
+  text-indent: 15px;
+  outline: 0;
+  font-size: 14px;
+  box-sizing: border-box
+}
+.quick-buy .btn {
+  width: 100%;
+  padding: 8px;
+  background: #793b88;
+  color: #fff
+}
+.quick-buy-title {
+  margin-bottom: 15px
+}
 @media screen and (max-width:1200px) {
   .header-content-logo {
     flex-shrink: 0
@@ -3761,5 +3852,8 @@ button.mfp-close {
     -webkit-box-direction: normal;
     flex-direction: column;
     padding-bottom: 0
+  }
+  .basket-payment-tab {
+    width: calc(100% - 30px)
   }
 }
